--- a/flexbox/styles/example2.css
+++ b/flexbox/styles/example2.css
@@ -1,6 +1,14 @@
+body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 .flex-container {
     width: 100vw;
+    height: 200px;
     display: flex;
+    background-color: beige;
 }
 
 .box {
@@ -15,22 +23,23 @@
 
 .box-1 {
     order: 1;
-    /* flex-grow: 1; */
+    flex-grow: 1;
+    align-self: center;
     /* flex-basis: 200px; */
 }
 
 .box-2 {
     order: 2;
-    /* flex-grow: 1; */
-    flex-shrink: 0;
+    flex-grow: 1;
+    /* flex-shrink: 0; */
 }
 
 .box-3 {
     order: 3;
-    /* flex-grow: 3; */
+    flex-grow: 1;
 }
 
 .box-4 {
     order: 4;
-    /* flex-grow: 5; */
+    flex-grow: 7;
 }
